@@ -1,6 +1,6 @@
 #ifndef _PyMOL_VERSION
 #ifndef PYMOL_EVAL
-#define _PyMOL_VERSION "1.6.0.0"
+#define _PyMOL_VERSION "1.6.9.0"
 #else
 #define _PyMOL_VERSION "1.6.0.0 eval"
 #endif
@@ -11,12 +11,12 @@
 #endif
 
 #ifndef _PyMOL_VERSION_double
-#define _PyMOL_VERSION_double 1.600
+#define _PyMOL_VERSION_double 1.690
 #endif
 
 
 /* for session file compatibility */
 
 #ifndef _PyMOL_VERSION_int
-#define _PyMOL_VERSION_int 1600
+#define _PyMOL_VERSION_int 1690
 #endif
