@@ -90,19 +90,15 @@ class Base:
         # mass calculation for implicit models
 
         valence = [0]*len(self.atom)
-        implicit = [0]*len(self.atom)
         
         for a in self.bond:
-            ai0 = a.index[0]
-            ai1 = a.index[1]
-            valence[ai0] = valence[ai0] + a.order
-            valence[ai1] = valence[ai1] + a.order
-        c = 0
-        for a in self.atom:
-            valence[c] = valence[c] - a.formal_charge
-            implicit[c] = a.get_implicit_valence()[valence[c]]
-            c = c + 1
-        h_count = reduce(operator.__add__,implicit)
+            v = 1.5 if a.order == 4 else a.order
+            valence[a.index[0]] += v
+            valence[a.index[1]] += v
+
+        h_count = sum(a.get_free_valence(v)
+                for (a, v) in zip(self.atom, valence))
+
         hydrogen = chempy.Atom()
         hydrogen.symbol='H'
         return self.get_mass()+hydrogen.get_mass()*h_count
